<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/item1" android:showAsAction="never" android:title="@string/action_size2048x1536" android:orderInCategory="100"></item>
    <item android:id="@+id/item2" android:title="@string/action_size1600x1200" android:showAsAction="never" android:orderInCategory="100"></item>
    <item android:id="@+id/item3" android:title="@string/action_size1280x960" android:showAsAction="never" android:orderInCategory="100"></item>
    <item android:id="@+id/item4" android:showAsAction="never" android:title="@string/action_size640x480" android:orderInCategory="100"></item>

</menu>
